# NoveltySearchForPacMan

./: .gitignore  CMakeLists.txt  Dll.cpp  ExampleAIModule.vcxproj  ExampleAIModule.vcxproj.filters  HsMmap.h  IASUGameWrapper.cpp  IASUGameWrapper.h  IASUModule.cpp  IASUModule.h  Makefile  ProjetIAR.sln  ProjetIAR.vcxproj  README.md  README_novelty  experiments.cpp  experiments.h  gene.cpp  gene.h  genome.cpp  genome.h  histogram.h  innovation.cpp  innovation.h  link.h  main.cpp  main.h  maze.cpp  maze.h  neatmain.cpp  network.cpp  noveltyexp.cpp  noveltyset.cpp  noveltyset.h  organism.cpp  organism.h  population.cpp  population.h  posix.cpp  sem.h  (+5 more)
PacMan/: npac
PacMan/examples/scores/: default.pacscore  test.pacscore
PacMan/src/: main.cpp
PacMan/src/Engine/: CDialog.cpp  CInputManager.cpp  CLayout.cpp  CLayout.h  CMenu.cpp  CMenu.h  CMenuItem.cpp  CMenuItem.h  CMenuItemOption.cpp  CMenuItemOption.h  CNCurses.cpp  CStateManager.cpp  CStateManager.h  CTime.cpp  CTimer.cpp  CWindow.cpp  CWindow.h
PacMan/src/Game/: CBoard.cpp  CBoard.h  CBoardUtils.cpp  CBoardUtils.h  CGame.cpp  CGame.h  CGameLayout.cpp  CGameLayout.h  CGhost.cpp  CGhost.h  CGhostHard.cpp  CGhostHard.h  CGhostManager.cpp  CGhostManager.h  CGhostMedium.cpp  CGhostMedium.h  CMenuLayout.cpp  CMenuLayout.h  CPlayer.cpp  CPlayer.h  CStateGame.cpp  CStateGame.h  CStateMenu.cpp  CStateMenu.h
read/: neatsettings.ne
